Creada pantallas de Categoria y Nueva Categoria

--- a/SGIBOS2/SGIBOS.vbproj
+++ b/SGIBOS2/SGIBOS.vbproj
@@ -131,6 +131,12 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Categorias.Designer.vb">
+      <DependentUpon>Categorias.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Categorias.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Clientes.Designer.vb">
       <DependentUpon>Clientes.vb</DependentUpon>
     </Compile>
@@ -172,6 +178,12 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="MySql\Data.vb" />
+    <Compile Include="NuevaCategoria.Designer.vb">
+      <DependentUpon>NuevaCategoria.vb</DependentUpon>
+    </Compile>
+    <Compile Include="NuevaCategoria.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="NuevoCliente.Designer.vb">
       <DependentUpon>NuevoCliente.vb</DependentUpon>
     </Compile>
@@ -216,6 +228,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Categorias.resx">
+      <DependentUpon>Categorias.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Clientes.resx">
       <DependentUpon>Clientes.vb</DependentUpon>
     </EmbeddedResource>
@@ -233,6 +248,9 @@
       <LastGenOutput>Resources.Designer.vb</LastGenOutput>
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NuevaCategoria.resx">
+      <DependentUpon>NuevaCategoria.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="NuevoCliente.resx">
       <DependentUpon>NuevoCliente.vb</DependentUpon>
